# spider

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  cross.toml  css_rules.yaml  data.db  fc_settings.yaml  start.sh  stop.sh
.github/workflows/: CI.yml  test.yml
api/: Cargo.toml
api/src/: main.rs
api_dependence/: Cargo.toml
api_dependence/mongodb/: mongodbapi.py
api_dependence/sql/: sqlapi.py
api_dependence/src/: format_response.rs  lib.rs  secure.rs
api_dependence/src/mysql/: mysqlapi.rs
api_dependence/src/sqlite/: mod.rs  sqliteapi.rs
core/: Cargo.toml
core/src/: main.rs
data_structures/: Cargo.toml
data_structures/src/: lib.rs
db/: Cargo.toml
db/schema/: 01_db.sql
db/schema/mysql/: 01_mysql.sql
db/schema/sqlite/: 01_sqlite.sql
db/src/: lib.rs  mongo.rs  mongodb.rs  mysql.rs  sqlite.rs
downloader/: Cargo.toml
downloader/src/: crawler.rs  download.rs  lib.rs
tmptest/: Cargo.toml
tmptest/src/: main.rs
tools/: Cargo.toml  baselogger.py
tools/src/: lib.rs
