[workspace]
members = ["downloader", "data_structures", "core", "tools"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
# scraper = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = {version = "0.4.31",features = ["std"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" , "mysql" , "sqlite" , "chrono" ] }