[workspace]
members = ["downloader", "data_structures", "core", "tools", "db", "api","api_dependence"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }
reqwest-middleware = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["std"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "sqlite",
    "chrono",
] }
url = "2.4.1"
axum = "0.6.20"