[workspace]
members = [
    "downloader",
    "data_structures",
    "core",
    "tools",
    "db",
    "api",
    "api_dependence",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4.37", features = ["std", "serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "sqlite",
    "chrono",
] }
url = "2.4"
axum = "0.7"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
jsonwebtoken = "8.0"

