[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
tokio.workspace = true
api_dependence = { path = "../api_dependence" }
db = { path = "../db" }
tools = { path = "../tools" }
tower-http = {version = "0.5",features = ["cors"]}
tower = "0.4"