[package]
name = "api_dependence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
db = { path = "../db" }
data_structures = { path = "../data_structures" }
serde.workspace = true
serde_json.workspace = true
