[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_yaml.workspace = true
data_structures = { path = "../data_structures" }
tools = { path = "../tools" }
feed-rs = "1.3.0"
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
# scraper.workspace = true
nipper = "0.1.9"
